# cmake-project-base

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  rebuild.sh  todo.txt
.github/workflows/: on_push_main.yml
cmake/: ClangTidy.cmake  CodeCoverage.cmake  UseBreathe.cmake  clang-tidy.cmake  code-coverage.cmake  deps.cmake  install-rules.cmake  install-script.cmake  link-time-optimization.cmake  lint-targets.cmake  packaging.cmake  prelude.cmake  uninstall-targets.cmake  variables.cmake
dependencies/: CMakeLists.txt
doc/: CMakeLists.txt
docs/: CMakeLists.txt  conf.py.in  index.rst
examples/: CMakeLists.txt  main.cc
include/MyLib/: mylib.h
packaging/: CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/MyLib/: CMakeLists.txt  mylib.cc  mylib.test.cc
src/MyLib/include/MyLib/: MyLib.h
src/MyLib/src/: MyLib.cc
src/MyLib/tests/: CMakeLists.txt  mylib_tests.cc
tests/: CMakeLists.txt
tests/MyLib/: CMakeLists.txt  mylib.test.cc
