include(UseBreathe)

set(DOCS_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/html)

add_breathe_doc(
  TARGET_NAME docs
  SOURCE_DIR
    ${CMAKE_CURRENT_SOURCE_DIR}
  HTML_DIR
    ${DOCS_OUTPUT_DIR}
  DOXY_FILE
    ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in
  CONF_FILE
    ${CMAKE_CURRENT_SOURCE_DIR}/conf.py.in
  COMMENT
    "HTML documentation")

install(DIRECTORY ${DOCS_OUTPUT_DIR}
        DESTINATION ${CMAKE_INSTALL_DOCDIR} COMPONENT MyProj_docs)